# filmgrainer

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: generate.sh
filmgrainer/: filmgrainer.py  graingamma.py  graingen.py  imgbuffers.py  main.py
