[metadata]
name = filmgrainer
version = 0.0.1
author = Lars Ole Pontoppidan
author_email = contact@larsee.com
description = filmgrainer - Adding realistic film grain to pictures
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages =
    filmgrainer
python_requires = >=3.6
install_requires =
    pillow
    numpy

[options.entry_points]
console_scripts =
    filmgrainer = filmgrainer.main:main

